# prompt-copier

./: .gitignore  Dockerfile  app.py  config.py  email_service.py  git_service.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  ssh_keys.py  verify_groups.py
data/: prompts.db
templates/: admin.html  git_explorer.html  index.html  login.html  reset.html  settings.html
