[project]
name = "prompt-copier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gitpython>=3.1.0",
    "itsdangerous>=2.0",
    "requests>=2.28.0",
    "pandas>=2.0.0",
]
